# Test

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 202606260001_create_tasks.py  202606260002_set_created_at_default.py
app/: main.py  worker.py
app/api/v1/: router.py  tasks.py
app/core/: config.py
app/db/: session.py
app/messaging/: producer.py
app/models/: enums.py  task.py
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: task_processor.py  task_service.py
docs/: ARCHITECTURE.md
tests/e2e/: test_task_flow.py
tests/integration/: test_tasks_api.py
tests/unit/: test_task_processor.py  test_task_service.py
